fix map canvas content overlap

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -765,12 +765,12 @@ Embed video
 Google map
 ========================================================================== */
 #map-canvas {
-  height: 500px;
+  height: 600px;
   width: 100%;
 }
 #map-content-wrapper {
   position: relative;
-  margin-top: -502px;
+  margin-top: -602px;
   margin-bottom: 150px;
 }
 #map-content {
